zz-backup/12-microservices /helm/bkup/cc-vr-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cc-virtualservice
spec:
  hosts:
    - currency-exchange
  http:
    - route:
        - destination:
            host: currency-exchange
            subset: v1
          weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: cc-virtualservice
spec:
  host: currency-exchange
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
